Fix bug with mobile header
Fix bug where logo overly expanding size of header on mobile, and text being cut off

--- a/www/custom_styles.css
+++ b/www/custom_styles.css
@@ -66,7 +66,6 @@
     height: auto;
 }
 
-/* Responsive images on large screens*/
 @media (min-width: 992px) {
     .responsive-img {
         max-width: 33%;
@@ -81,17 +80,19 @@
 }
 
 /* Fix header & sidebar position*/
-.main-sidebar {
-    position: fixed !important;
-}
-
 .main-header {
     position: fixed !important;
     width: 100%;
     z-index: 1030;
-    max-height: 50px;
+    max-height: none; 
 }
 
 .content-wrapper {
-    padding-top: 25px;
+    padding-top: 25px; 
+}
+
+@media (max-width: 768px) {
+    .content-wrapper {
+        padding-top: calc(75px + 1em); 
+    }
 }
